# checkllm

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.deepeval/: .deepeval_telemetry.txt
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  new_metric.md
.github/workflows/: checkllm-action.yml  ci.yml  competitor-bench.yml  docs.yml  labels-sync.yml  pre-commit.yml  release-drafter.yml  release.yml  vscode-extension.yml
benchmarks/competitor-comparison/: index.html
benchmarks/competitor_comparison/: .gitignore  README.md  pyproject.toml
benchmarks/competitor_comparison/bench/: cli.py  datasets.py  report.py  runner.py  schema.py  scoring.py  showcase.py
benchmarks/competitor_comparison/bench/adapters/: __init__.py  checkllm_adapter.py  deepeval_adapter.py  promptfoo_adapter.py  ragas_adapter.py
benchmarks/competitor_comparison/tests/: conftest.py  test_checkllm_adapter.py  test_datasets.py  test_deepeval_adapter.py  test_promptfoo_adapter.py  test_ragas_adapter.py  test_report.py  test_runner.py  test_schema.py  test_scoring.py  test_showcase.py
benchmarks/competitor_comparison/tests/fixtures/: halubench_tiny.json  jailbreakbench_tiny.json  ragtruth_tiny.json  truthfulqa_tiny.json
benchmarks/cost-latency/: index.html
benchmarks/cost_latency/: README.md  __init__.py  runner.py
benchmarks/methodology/: index.html
benchmarks/paper/: agents.py  config.yaml  dataset_manifest.json  run_all.py  smoke.yaml
comparison/: index.html
docs/: comparison.md  index.md  observability.md  quickstart.md  red-teaming.md  release-process.md  vs-deepeval.md  vs-promptfoo.md  vs-ragas.md
docs/benchmarks/: competitor-comparison.csv  competitor-comparison.html  competitor-comparison.md  cost-latency.md  methodology.md
docs/ci/: gitlab-ci.yml
docs/guides/: advanced-patterns.md  choosing-metrics.md  ci-cd.md  cli-reference.md  configuration.md  custom-metrics.md  dag-metric.md  deployment.md  deterministic-checks.md  exporting-results.md  guardrails.md  llm-metrics.md  metrics-reference.md  migration.md  model-graded-assertions.md  plugins.md  rag-dataset-generation.md  retriever-validation.md  troubleshooting.md  v5.1-new-apis.md  yaml-config-validation.md  yaml-schema.md
docs/integrations/: README.md  langchain_example.py  llama_index_example.py  pydantic_ai_example.py
docs/notebooks/: 01_quickstart.ipynb  02_rag_evaluation.ipynb  03_conversational_eval.ipynb  04_agent_trajectory.ipynb  05_redteam.ipynb  index.md
docs/tutorials/: evaluating-agents-in-10-minutes.md
editor/vscode/: .vscodeignore  CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
examples/: README.md  dag_evaluation.py  qa_dataset.yaml  rag_evaluation.py  test_agentic_evaluation.py  test_basic.py  test_custom_metrics.py  test_dataset_driven.py  test_guardrails_production.py  test_llm_judge.py  test_multi_turn_conversation.py  test_rag_pipeline.py  test_red_team_evaluation.py  test_regression_workflow.py
guides/advanced-patterns/: index.html
guides/choosing-metrics/: index.html
guides/ci-cd/: index.html
guides/cli-reference/: index.html
guides/configuration/: index.html
guides/custom-metrics/: index.html
guides/dag-metric/: index.html
guides/deployment/: index.html
guides/deterministic-checks/: index.html
guides/exporting-results/: index.html
guides/guardrails/: index.html
guides/llm-metrics/: index.html
guides/metrics-reference/: index.html
guides/migration/: index.html
guides/model-graded-assertions/: index.html
guides/plugins/: index.html
guides/rag-dataset-generation/: index.html
guides/retriever-validation/: index.html
guides/troubleshooting/: index.html
guides/v5.1-new-apis/: index.html
guides/yaml-config-validation/: index.html
guides/yaml-schema/: index.html
integrations/: crewai_example.py  index.html  langchain_example.py
notebooks/: 01_quickstart.ipynb  04_agent_trajectory.ipynb  05_redteam.ipynb  index.html
observability/: index.html
paper/: bibliography.bib  checkllm.tex  lint.py  reproducibility_checklist.md  zenodo.md
paper/datasheets/: gaia_checkllm.md  tau_bench_checkllm.md
paper/figures/: generated_tables.tex  ingest.py
pftest/: out.json
quickstart/: index.html
red-teaming/: index.html
release-process/: index.html
scripts/: _build_tutorials.py  bump_version.py  check_no_ai_mentions.sh  generate-lock.sh  generate_changelog.py  sync_version.py
search/: search_index.json
src/checkllm/: __init__.py  _check_builtins.py  adaptive_guardrails.py  agents.py  alignment.py  api.py  arena.py  batch.py  cache.py  chain.py  check.py  check_deterministic.py  check_judge.py  check_registry.py  cli.py  compare.py  compliance.py  compliance_frameworks.py  config.py  (+59 more)
tests/: conftest.py  test_adaptive_guardrails.py  test_advanced_metrics.py  test_agents.py  test_agents_from_trace.py  test_alignment.py  test_api.py  test_arena.py  test_batch.py  test_batch_anthropic.py  test_batch_models.py  test_benchmarks.py  test_benchmarks_expanded.py  test_benchmarks_new.py  test_budget.py  test_bulk_export.py  test_cache.py  test_chain.py  test_chain_comprehensive.py  test_check.py  test_check_autodetect.py  test_check_collector_comprehensive.py  test_check_deterministic_comprehensive.py  test_check_failed_error.py  test_check_judge_comprehensive.py  test_check_registry.py  test_check_structure.py  test_ci_gitlab.py  test_cicd.py  test_cli.py  test_cli_ci.py  test_cli_dataset.py  test_cli_estimate.py  test_cli_init.py  test_cli_integration.py  test_cli_list_metrics.py  test_compare.py  test_compliance.py  test_compliance_frameworks.py  test_compliance_frameworks_builders.py  (+124 more)
vs-deepeval/: index.html
vs-promptfoo/: index.html
vs-ragas/: index.html
vscode-checkllm/: CHANGELOG.md  README.md  package.json  tsconfig.json
(+267 files in other folders)
