[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "checkllm"
version = "3.0.0b1"
description = "The most comprehensive LLM testing and evaluation framework for Python."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "checkllm contributors" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "scipy>=1.11.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.0",
    "tiktoken>=0.5.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
anthropic = [
    "anthropic>=0.20.0",
]
gemini = [
    "google-generativeai>=0.5.0",
]
litellm = [
    "litellm>=1.0.0",
]
embeddings = [
    "sentence-transformers>=2.0.0",
]
docs = [
    "mkdocs-material>=9.0.0",
    "mkdocs>=1.5.0",
]
all = [
    "checkllm[anthropic,gemini,litellm,embeddings,docs]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "coverage>=7.0.0",
    "httpx>=0.24.0",
]

[project.entry-points.pytest11]
checkllm = "checkllm.pytest_plugin"

[project.entry-points."checkllm.metrics"]

[project.scripts]
checkllm = "checkllm.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/checkllm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.checkllm]
judge_model = "gpt-4o"
default_threshold = 0.8
runs_per_test = 1
snapshot_dir = ".checkllm/snapshots"
cache_enabled = true
cache_ttl_seconds = 604800
max_concurrency = 10
engine = "auto"
log_level = "WARNING"

[tool.checkllm.profiles.dev]
judge_model = "gpt-4o-mini"
budget = 1.0
log_level = "DEBUG"

[tool.checkllm.profiles.ci]
cache_enabled = false
budget = 10.0
log_level = "WARNING"
engine = "async"
