[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "checkllm"
version = "5.0.1"
description = "The most comprehensive LLM testing and evaluation framework for Python."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "checkllm contributors" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "scipy>=1.11.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.0",
    "tiktoken>=0.5.0",
    "tenacity>=8.0.0",
    "pluggy>=1.3.0",
]

[project.optional-dependencies]
openai = [
    "openai>=1.0.0",
]
anthropic = [
    "anthropic>=0.20.0",
]
gemini = [
    "google-generativeai>=0.5.0",
]
litellm = [
    "litellm>=1.0.0",
]
embeddings = [
    "sentence-transformers>=2.0.0",
]
multimodal = [
    "pillow>=10.0.0",
]
docs = [
    "mkdocs-material>=9.0.0",
    "mkdocs>=1.5.0",
]
langsmith = [
    "langsmith>=0.1.0",
]
langfuse = [
    "langfuse>=2.0.0",
]
datadog = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
]
prometheus = [
    "prometheus-client>=0.17.0",
]
hf = [
    "datasets>=2.14.0",
]
all = [
    "checkllm[openai,anthropic,gemini,litellm,embeddings,multimodal,docs,langsmith,langfuse,datadog,prometheus,hf]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "coverage>=7.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.24.0",
    "openai>=1.0.0",
    "mypy>=1.8.0",
    "bandit>=1.7.0",
    "types-PyYAML>=6.0.0",
    "types-Jinja2>=2.11.0",
]

[project.entry-points.pytest11]
checkllm = "checkllm.pytest_plugin"

[project.entry-points."checkllm.metrics"]

[project.scripts]
checkllm = "checkllm.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/checkllm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-p no:checkllm"

[tool.checkllm]
judge_model = "gpt-4o"
default_threshold = 0.8
runs_per_test = 1
snapshot_dir = ".checkllm/snapshots"
cache_enabled = true
cache_ttl_seconds = 604800
max_concurrency = 10
engine = "auto"
log_level = "WARNING"

[tool.checkllm.profiles.dev]
judge_model = "gpt-4o-mini"
budget = 1.0
log_level = "DEBUG"

[tool.checkllm.profiles.ci]
cache_enabled = false
budget = 10.0
log_level = "WARNING"
engine = "async"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_unreachable = true
warn_return_any = true
warn_unused_ignores = true
exclude = [
    "tests/",
    "benchmarks/",
    "docs/",
]

# Older modules retain relaxed settings. All newly added workstream modules
# (integrations, new multimodal metrics, datasets helpers, dedup, redteam
# dataset/evolver, GitLab CI helper) are strict-clean without overrides.
[[tool.mypy.overrides]]
module = [
    "checkllm",
    "checkllm.metrics",
    "checkllm.alignment",
    "checkllm.api",
    "checkllm.batch",
    "checkllm.cache",
    "checkllm.check",
    "checkllm.check_deterministic",
    "checkllm.check_judge",
    "checkllm.cli",
    "checkllm.compliance_frameworks",
    "checkllm.compliance_scanner",
    "checkllm.config",
    "checkllm.consensus",
    "checkllm.dashboard",
    "checkllm.deterministic",
    "checkllm.embeddings",
    "checkllm.engines",
    "checkllm.frameworks",
    "checkllm.guardrails",
    "checkllm.history",
    "checkllm.integrations.claude_agents",
    "checkllm.integrations.crewai",
    "checkllm.integrations.langchain",
    "checkllm.integrations.llamaindex",
    "checkllm.integrations.openai_agents",
    "checkllm.integrations.pydantic_ai",
    "checkllm.judge",
    "checkllm.logging_config",
    "checkllm.metrics.relevance",
    "checkllm.providers",
    "checkllm.pytest_helpers",
    "checkllm.pytest_plugin",
    "checkllm.redteam",
    "checkllm.redteam_coding_agents",
    "checkllm.regression.compare",
    "checkllm.reporting.comparison",
    "checkllm.resilience",
    "checkllm.streaming",
    "checkllm.synthesizer",
    "checkllm.testing",
    "checkllm.tracing",
    "checkllm.trajectory",
    "checkllm.yaml_config",
    "checkllm.yaml_eval",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
warn_return_any = false
warn_unused_ignores = false
warn_unreachable = false
no_implicit_reexport = false
disallow_any_generics = false
disallow_subclassing_any = false

# Mixin modules: methods access attributes defined on the host class, which
# mypy cannot infer without explicit Protocols. Suppress attr-defined here
# and revisit once the host Check class is promoted to a Protocol.
[[tool.mypy.overrides]]
module = [
    "checkllm.check_judge",
    "checkllm.check_deterministic",
]
disable_error_code = ["attr-defined"]

# Legacy modules with heavy provider-SDK union types (Anthropic blocks,
# google.generativeai, OpenAI SDK) and dynamic judge dispatch. The error
# classes here are expected and will be cleaned up in a follow-up pass.
[[tool.mypy.overrides]]
module = [
    "checkllm.yaml_config",
    "checkllm.yaml_eval",
    "checkllm.judge",
    "checkllm.cli",
    "checkllm.providers",
    "checkllm.synthesizer",
    "checkllm.streaming",
    "checkllm.reporting.comparison",
    "checkllm",
    "checkllm.compliance_frameworks",
    "checkllm.check",
    "checkllm.dual_judge",
    "checkllm.trajectory",
    "checkllm.tracing",
    "checkllm.watcher",
    "checkllm.resilience",
    "checkllm.regression.compare",
    "checkllm.redteam",
    "checkllm.redteam_coding_agents",
    "checkllm.logging_config",
    "checkllm.engines",
    "checkllm.api",
    "checkllm.batch",
    "checkllm.cache",
    "checkllm.consensus",
    "checkllm.config",
    "checkllm.dashboard",
    "checkllm.embeddings",
    "checkllm.frameworks",
    "checkllm.guardrails",
    "checkllm.history",
    "checkllm.pytest_helpers",
    "checkllm.pytest_plugin",
    "checkllm.metrics",
    "checkllm.compliance_scanner",
    "checkllm.deterministic",
    "checkllm.testing",
    "checkllm.discovery",
    "checkllm.errors",
    "checkllm.model_audit",
    "checkllm.models",
    "checkllm.compliance",
    "checkllm.industry_compliance",
    "checkllm.alignment",
    "checkllm.arena",
    "checkllm.adaptive_guardrails",
    "checkllm.agents",
    "checkllm.experiments",
    "checkllm.knowledge_graph",
    "checkllm.multilingual",
    "checkllm.observe",
    "checkllm.optimize",
    "checkllm.rag_poison",
    "checkllm.redteam_strategies",
    "checkllm.dpo",
    "checkllm.deprecations",
    "checkllm.chain",
    "checkllm.hookspecs",
    "checkllm.compare",
    "checkllm.conversation",
    "checkllm.runner",
    "checkllm.estimator",
    "checkllm.strategies",
]
disable_error_code = [
    "union-attr",
    "attr-defined",
    "call-arg",
    "call-overload",
    "assignment",
    "arg-type",
    "dict-item",
    "typeddict-item",
    "operator",
    "no-redef",
    "misc",
    "var-annotated",
    "name-defined",
    "return-value",
    "unreachable",
    "type-arg",
    "unused-ignore",
]

[tool.bandit]
exclude_dirs = ["tests", "benchmarks"]
skips = ["B101"]

[tool.coverage.run]
source = ["checkllm"]
branch = false

[tool.coverage.report]
omit = [
    "*/tests/*",
    "*/benchmarks/*",
]
