[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "checkllm-competitor-bench"
version = "0.1.0"
description = "Internal benchmark: CheckLLM vs DeepEval vs Ragas vs promptfoo."
requires-python = ">=3.11"
dependencies = [
    "checkllm",
    "deepeval>=3.9.0",
    "ragas>=0.4.0",
    "promptfoo>=0.1.4",
    "datasets>=2.19.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.11.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "langchain-openai>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "pytest-timeout>=2.3.0"]

[project.scripts]
checkllm-bench = "bench.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["bench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
